deploy/kubernetes/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: key-submission
  namespace: covidshield
  labels:
    app.kubernetes.io/name: key-submission
    app.kubernetes.io/part-of: covidshield
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: key-submission
    app.kubernetes.io/part-of: covidshield
---
apiVersion: v1
kind: Service
metadata:
  name: key-retrieval
  namespace: covidshield
  labels:
    app.kubernetes.io/name: key-retrieval
    app.kubernetes.io/part-of: covidshield
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
  selector:
    app.kubernetes.io/name: key-retrieval
    app.kubernetes.io/part-of: covidshield
